Add Thunderbolt 3 HotPlug SSDT

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -46,6 +46,14 @@
 				<key>Path</key>
 				<string>SSDT-UIAC.aml</string>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Thunderbolt 3 HotPlug</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT-TB3.aml</string>
+			</dict>
 		</array>
 		<key>Block</key>
 		<array/>
