Set slide boot arg to 4, enable ShrinkMemoryMap

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -104,7 +104,7 @@
 			<key>SetupVirtualMap</key>
 			<true/>
 			<key>ShrinkMemoryMap</key>
-			<false/>
+			<true/>
 			<key>SignalAppleOS</key>
 			<false/>
 		</dict>
@@ -446,7 +446,7 @@
 				Rg==
 				</data>
 				<key>boot-args</key>
-				<string>-v debug=0x100 keepsyms=1 slide=0 alcid=1 agdpmod=pikera shikigva=16</string>
+				<string>-v debug=0x100 keepsyms=1 slide=4 alcid=1 agdpmod=pikera shikigva=16</string>
 				<key>csr-active-config</key>
 				<data>
 				AAAAAA==
