Set ShrinkMemoryMap to `false`

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -104,7 +104,7 @@
 			<key>SetupVirtualMap</key>
 			<true/>
 			<key>ShrinkMemoryMap</key>
-			<true/>
+			<false/>
 			<key>SignalAppleOS</key>
 			<false/>
 		</dict>
