--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -392,7 +392,7 @@
 				<key>Comment</key>
 				<string>Clean NVRAM</string>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>Name</key>
 				<string>Clean NVRAM</string>
 				<key>Path</key>
