--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -446,7 +446,7 @@
 				Rg==
 				</data>
 				<key>boot-args</key>
-				<string>-v debug=0x100 keepsyms=1 slide=4 alcid=1 agdpmod=pikera shikigva=16</string>
+				<string>-v debug=0x100 keepsyms=1 alcid=16 agdpmod=pikera shikigva=16 slide=4</string>
 				<key>csr-active-config</key>
 				<data>
 				AAAAAA==
