--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -115,6 +115,10 @@
 				<data>
 				AQAAAA==
 				</data>
+				<key>igfxfw</key>
+				<data>
+				AgAAAA==
+				</data>
 			</dict>
 		</dict>
 		<key>Block</key>
