--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -504,7 +504,7 @@
 		<key>Generic</key>
 		<dict>
 			<key>AdviseWindows</key>
-			<false/>
+			<true/>
 			<key>MLB</key>
 			<string>REDACTED</string>
 			<key>ROM</key>
