--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -106,6 +106,13 @@
 				<key>shikigva</key>
 				<integer>80</integer>
 			</dict>
+			<key>PciRoot(0x0)/Pci(0x1F,0x3)</key>
+			<dict>
+				<key>layout-id</key>
+				<data>
+				EAAAAA==
+				</data>
+			</dict>
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
 				<key>AAPL,ig-platform-id</key>
@@ -462,7 +469,7 @@
 				Rg==
 				</data>
 				<key>boot-args</key>
-				<string>-v debug=0x100 keepsyms=1 alcid=16 agdpmod=pikera slide=4</string>
+				<string>-v debug=0x100 keepsyms=1 agdpmod=pikera slide=4</string>
 				<key>csr-active-config</key>
 				<data>
 				AAAAAA==
